chore: Update date and time formatting in chatroom views

--- a/app/views/chatrooms/_chats.html.erb
+++ b/app/views/chatrooms/_chats.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="chat-info-section">
       <p class="chat-date-time">
-        <%= chat.gig.time.strftime("%a, %b %e %Y") %><br>
+        <%= chat.gig.date.strftime("%a, %b %e %Y") %><br>
         <h1 class="chat-event-title"><%= chat.gig.event_name %>: <%= chat.gig.band%></h1>
       </div>
       <div class="chat-buttons-section">
