--- a/app/assets/stylesheets/components/_gigs.scss
+++ b/app/assets/stylesheets/components/_gigs.scss
@@ -17,3 +17,17 @@
     padding: 20px;
     background-color: #f8f9fa; /* Optional: Add a background color */
 }
+
+.h2 {
+    font-size: 0.5rem;
+    font-weight: normal;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+.h4 {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
