changed avatar to senie's photo

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <%# Add user avatar here %>
               <div class="user-icon-container">
-                <%= image_tag asset_path('user-dianna.jpg'), class: "avatar", alt: "dropdown menu" %>
+                <%= image_tag asset_path('senie.jpg'), class: "avatar", alt: "dropdown menu" %>
               </a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <%= link_to "Profile", "#", class: "dropdown-item" %>
