--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -9,8 +9,8 @@
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 355px;
-  height: 150px;
+  width: auto;
+  height: 200px;
 }
 
 .image-section {
