--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 .navbar li a {
-  color: #f7f7f7;
+  color: #fff;
 }
 
 .nav-item:hover {
-  background-color: #6F2B75;
+  background-color: #6f2b75;
   color: #100303;
   border-radius: 5px;
   padding: 5px 10px;
@@ -25,7 +25,6 @@
   width: 200px;
 }
 
-
 @media (max-width: 767px) {
   .navbar {
     flex-direction: column;
@@ -34,6 +33,10 @@
 
   .user-icon-container li a {
     align-self: flex-end;
-    color:black;
+    color: black;
   }
+}
+
+.dropdown-menu {
+  background-color: #100303;
 }
