--- a/app/assets/stylesheets/components/_gigs.scss
+++ b/app/assets/stylesheets/components/_gigs.scss
@@ -1,33 +1,27 @@
-
-
-.map-container {
-    flex-grow: 1;
-    position: relative;
+// Holds the positioning for the pop-up card on home page
+.content-wrapper {
+  position: absolute;
+  top: 66%;
+  min-width: 100%;
+  //left: 1.53%;
 }
 
-.mapbox {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
 .gig-cards-container {
-    margin-top: auto;
-    padding: 20px;
-    background-color: #f8f9fa; /* Optional: Add a background color */
+  margin-top: auto;
+  padding: 20px;
+  background-color: #f8f9fa;
 }
 
 .h2 {
-    font-size: 0.5rem;
-    font-weight: normal;
-    line-height: 1.2;
-    margin-bottom: 1rem;
+  font-size: 0.5rem;
+  font-weight: normal;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 .h4 {
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: 1.2;
-    margin-bottom: 1rem;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
