fix: added conditional to handle no start time for gig

--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -5,7 +5,7 @@
       <%#  Turns the time into a Day, Date, Month, Year format %>
       <h3 class="top-heading"><%= gig.date.strftime("%a, %b %e %Y") %>
         <br>
-        <%= gig.time_from.strftime("%I:%M %P") %> -         <%= gig.time_to.strftime("%I:%M %P") %>
+        <%= gig.time_from ? gig.time_from.strftime('%I:%M %P') : 'TBA' %>
       </h3>
     </div>
     <div class="pb-2">
